{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 7,
  "lineage": "03eb9cf8-96cd-3829-43a9-640d6a92fc2f",
  "resources": [
    {
      "module": "module.EC2_Module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Terraform_resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0182f373e66f89c85",
            "arn": "arn:aws:ec2:us-east-1:058264402558:instance/i-0db407de6b6dd7eff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db407de6b6dd7eff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0179dc562cdc43653",
            "private_dns": "ip-172-31-46-99.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.99",
            "public_dns": "ec2-54-144-31-106.compute-1.amazonaws.com",
            "public_ip": "54.144.31.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02764974dd70b8a02",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f81f38ed6d924416",
            "tags": {
              "Name": "Terraform_EC2"
            },
            "tags_all": {
              "Name": "Terraform_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010b4bc058a098610"
            ]
          }
        }
      ]
    },
    {
      "module": "module.SG_Module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Terraform_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264402558:security-group/sg-0077ece5134bb6059",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0077ece5134bb6059",
            "ingress": [],
            "name": "EC2_SG",
            "name_prefix": "",
            "owner_id": "058264402558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_SG"
            },
            "tags_all": {
              "Name": "EC2_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddc8bfd54da38ac8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SG_Module",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264402558:security-group-rule/sgr-0686ad42b11ddea29",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0686ad42b11ddea29",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0077ece5134bb6059",
            "security_group_rule_id": "sgr-0686ad42b11ddea29",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SG_Module.aws_security_group.Terraform_SG"
          ]
        }
      ]
    }
  ]
}